# InConnect

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
backend/: .bandit  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260127_add_performance_indexes.py  20260127_initial_create_all_core_tables.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/v1/: audit.py  auth.py  batch.py  health.py  hotels.py  messages.py  permissions.py  reports.py  rules.py  settings.py  staff.py  tickets.py  webhook.py  websocket.py
backend/app/core/: auth.py  database.py  exceptions.py  logging.py  performance.py  permissions.py  security.py
backend/app/crud/: __init__.py  base.py  conversation.py  hotel.py  message.py  sla_config.py  staff.py  system_config.py  ticket.py  ticket_timeline.py
backend/app/models/: __init__.py  audit_log.py  auto_rule.py  conversation.py  hotel.py  message.py  permission.py  routing_rule.py  sla_config.py  staff.py  system_config.py  ticket.py  ticket_timeline.py
backend/app/schemas/: __init__.py  auth.py  batch.py  common.py  conversation.py  hotel.py  message.py  report.py  sla.py  staff.py  system_config.py  ticket.py  ticket_timeline.py
backend/app/services/: __init__.py  audit_service.py  auto_ticket_service.py  batch_service.py  cache_service.py  report_service.py  routing_service.py  rule_test_service.py  websocket_manager.py
backend/app/utils/: wechat.py
backend/tests/: conftest.py  test_api.py  test_e2e.py  test_performance.py
backend/tests/test_crud/: __init__.py
backend/tests/test_services/: test_services.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  batch.ts  client.ts  messages.ts  permissions.ts  quickReply.ts  reports.ts  rules.ts  settings.ts  staff.ts  tickets.ts
frontend/src/pages/: AuditLogs.tsx  ConversationList.tsx  EnhancedDashboard.tsx  Login.tsx  MessageChat.tsx  MessageHistory.tsx  PermissionMatrix.tsx  Reports.tsx  RuleManagement.tsx  Settings.tsx  StaffDashboard.tsx  TicketDetail.tsx  TicketList.tsx
frontend/src/stores/: auth.ts  report.ts  template.ts  ticket.ts
frontend/src/utils/: websocket.ts
frontend/tests/e2e/specs/: app.spec.ts
